# CAVASSPY

./: README.md  pyproject.toml
src/cavass/: __init__.py  _io.py  cavass_data.py  colors.py  dicom.py  integration.py  largest_component.py  match.py  nifti.py  ops.py  overlay.py  slice_range.py  windowing_transform.py
src/cavass/medimgconvert/: __init__.py  dicom_cavass.py  dicom_nifti.py  nifti_cavass.py
test/: read.py  save.py
