[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[tool.hatch.build.targets.wheel]
packages = ['src/cavass']

[project]
name = 'cavass'
version = '1.5.0'
requires-python = '>=3.11'
license = 'MIT'

authors = [
    { name = 'Dai Jian', email = 'daijian@stumail.ysu.edu.cn' },
]

readme = 'README.md'
description = 'CAVASS Python package.'

classifiers = [
    'Programming Language :: Python :: 3.11',
]

dependencies = [
    'numpy',
    'nibabel',
    'pydicom',
    'SimpleITK',
    'scipy',
]

